web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-arrow-param-rhs-pat/strict-mode-parent-not-current-async/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (3,19)
3|    async ({value=await}) => {
 |                 ^
